--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>5.10.0</version> <!-- Replace with the latest version -->
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
